--- a/carrosel_banners.css
+++ b/carrosel_banners.css
@@ -30,7 +30,7 @@
     width: 100%;
     height: 100%;
     position: relative;
-    transition: all .3s ease-in-out;
+    transition: all .9s ease-out;
     display: flex;
     align-items: center;
     justify-content: center;
